# glGalacticSystem

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Planet.h  PlanetarySystem.h  Sphere.h  StarSystem.h  SysCamera.h
src/: Camera.cpp  Planet.cpp  PlanetarySystem.cpp  Sphere.cpp  StarSystem.cpp  SysCamera.cpp  main.cpp  main_ps.cpp
tests/: 3dStar.cpp  BoxProced.cpp  CameraMovment.cpp  MovProced.cpp  PickStars.cpp  SysView.cpp  inMovProced.cpp  rnd_double.cpp  stuff.cpp  workspace.code-workspace
